RESOLVED FIXED159220
REGRESSION(r201405): Fullscreen video no longer enters low-power mode
https://bugs.webkit.org/show_bug.cgi?id=159220
Summary REGRESSION(r201405): Fullscreen video no longer enters low-power mode
Jer Noble
Reported 2016-06-28 13:13:44 PDT
REGRESSION(r201405): Fullscreen video no longer enters low-power mode
Attachments
Patch (6.85 KB, patch)
2016-06-28 13:17 PDT, Jer Noble
bdakin: review+
Patch for landing (7.01 KB, patch)
2016-06-30 17:06 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2016-06-28 13:14:13 PDT
Jer Noble
Comment 2 2016-06-28 13:17:53 PDT
Brent Fulgham
Comment 3 2016-06-28 15:31:59 PDT
Comment on attachment 282274 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=282274&action=review > Source/WebKit2/UIProcess/WebPageProxy.cpp:1320 > + #if PLATFORM(COCOA) > Source/WebKit2/UIProcess/WebPageProxy.cpp:1324 > + m_process->send(Messages::WebPage::SetTopContentInsetFenced(contentInset, fenceAttachment), m_pageID); #else m_process->send(Messages::WebPage::SetTopContentInset(contentInset); #endif > Source/WebKit2/WebProcess/WebPage/WebPage.cpp:2459 > This new message handler probably needs to be #if PLATFORM(COCOA) > Source/WebKit2/WebProcess/WebPage/WebPage.h:1055 > #if PLATFORM(COCOA) > Source/WebKit2/WebProcess/WebPage/WebPage.h:1056 > + void setTopContentInsetFenced(float, IPC::Attachment); #endif > Source/WebKit2/WebProcess/WebPage/WebPage.messages.in:32 > + SetTopContentInsetFenced(float contentInset, IPC::Attachment fencePort) Maybe you need to keep both messages, the original for #if !PLATFORM(COCOA).
Jer Noble
Comment 4 2016-06-30 15:17:33 PDT
(In reply to comment #3) > Comment on attachment 282274 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=282274&action=review > > > Source/WebKit2/UIProcess/WebPageProxy.cpp:1320 > > + > > #if PLATFORM(COCOA) > > > Source/WebKit2/UIProcess/WebPageProxy.cpp:1324 > > + m_process->send(Messages::WebPage::SetTopContentInsetFenced(contentInset, fenceAttachment), m_pageID); > > #else > m_process->send(Messages::WebPage::SetTopContentInset(contentInset); > #endif > > > Source/WebKit2/WebProcess/WebPage/WebPage.cpp:2459 > > > > This new message handler probably needs to be #if PLATFORM(COCOA) > > > Source/WebKit2/WebProcess/WebPage/WebPage.h:1055 > > > > #if PLATFORM(COCOA) > > > Source/WebKit2/WebProcess/WebPage/WebPage.h:1056 > > + void setTopContentInsetFenced(float, IPC::Attachment); > > #endif > > > Source/WebKit2/WebProcess/WebPage/WebPage.messages.in:32 > > + SetTopContentInsetFenced(float contentInset, IPC::Attachment fencePort) > > Maybe you need to keep both messages, the original for #if !PLATFORM(COCOA). Sure thing.
Jer Noble
Comment 5 2016-06-30 17:06:12 PDT
Created attachment 282494 [details] Patch for landing
WebKit Commit Bot
Comment 6 2016-07-01 16:42:12 PDT
Comment on attachment 282494 [details] Patch for landing Clearing flags on attachment: 282494 Committed r202763: <http://trac.webkit.org/changeset/202763>
Note You need to log in before you can comment on or make changes to this bug.