Source/WebKit2/WebProcess/WebPage/WebPage.cpp
@@ -2457,6 +2457,17 @@ void WebPage::setDrawsBackground(bool drawsBackground)
     m_drawingArea->setNeedsDisplay();
 }
 
+#if PLATFORM(COCOA)
+void WebPage::setTopContentInsetFenced(float contentInset, IPC::Attachment fencePort)
+{
+    m_drawingArea->addFence(MachSendRight::create(fencePort.port()));
+
+    setTopContentInset(contentInset);
+
+    mach_port_deallocate(mach_task_self(), fencePort.port());
+}
+#endif
+
 void WebPage::setTopContentInset(float contentInset)
 {
     if (contentInset == m_page->topContentInset())
